2007-09-01  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/menus.c (menu_main_edit): Fixed Paste project menu entry. It
	was associated with the cut_project function.

2007-08-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* Applied patch by Quentin Harley for currency symbol
	  configuration with some changes to allow for locale based
	  formating of currency values. Details about the changed files
	  bellow.
	
	* glade/prefs.glade: Added GUI elements for the currency formating
	options.

	* ghtml/C/gtt.scm (gtt-task-billable-value-str): Removed hard
	coded formating of zero values. It's now done inside ghtml.c.

	* src/gconf-io.c (gtt_gconf_save, gtt_gconf_load): Added support
	for loading and saving currency formating options.

	* src/prefs.h: Added configuration for currency formating.

	* src/prefs.c (currency_sensitive_cb, currency_options)
	(prefs_set, options_dialog_set, prefs_dialog_new): Added
	configuration for currency formating.

	* src/ghtml.c (task_get_value_str_scm): Added support for
	localized monetary formating.

2007-08-30  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (read_data): Changed to support reloading of the
	projects data

	* src/notes-area.c (notes_area_set_project): handle proj == NULL
	as removing the current reference from the notes area, so we
	can do it before reloading data.

	* src/dbus.xml: Added interface for the file method

	* src/gtt.h: Added prototype of the read_data function

	* src/dbus.c (gnotime_dbus_file): Added dbus file method handler

	* scripts/gnotime-remote: Added save-file and reload-file commands

2007-08-25  Goedson Teixeira Paixao  <goedson@debian.org>

	* scripts/gnotime-remote: Added script using the dbus interface
	to control the timer.

	* Applied sourceforge patch #1724152 (add dbus interface to
	stop and start the timer)

2007-08-24  Goedson Teixeira Paixao  <goedson@debian.org>

	* ghtml/C/gtt.scm: Internationalized the gtt-filter-*-tasks and